[package]
name = "twit-rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.9.0"
chrono = "0.4.28"
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
fantoccini = { version = "0.19.3", features = ["rustls-tls"] }
indexmap = "2.0.0"
regex = "1.9.4"
scraper = "0.17.1"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["sqlite"] }
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.2"
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
